overflow y fixed for calendar

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -60,7 +60,8 @@
   height: 100%;
 }
 
-body {
+.App, body {
   background-size: 0 0;
+  overflow-y: visible;
 }
 
